fix(config): modify dev&build script

--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "scripts": {
     "tauri": "tauri",
-    "dev": "tauri dev",
     "serve": "pnpm dev",
-    "build": "tauri build",
+    "tauri:dev": "tauri dev",
+    "tauri:build": "tauri build",
     "icon": "tauri icon public/app-icon.png",
-    "browser:dev": "NODE_OPTIONS=--max-old-space-size=4096 vite",
-    "browser:build": "rimraf dist && NODE_OPTIONS=--max-old-space-size=8192 vite build",
+    "dev": "vite dev",
+    "build": "vite build",
     "build:staging": "rimraf dist && vite build --mode staging",
     "report": "rimraf dist && vite build",
     "preview": "vite preview",
