--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,7 +23,7 @@ csv = "1.3.0"
 chrono = "0.4.34"
 serde = { version = "1.0.196", features = ["derive"] }
 tauri = { version = "1.5.4", features = [ "api-all"] }
-polars = { version = "0.37.0", features = [
+polars = { version = "0.38.1", features = [
     "lazy",
     "diagonal_concat",
     "streaming",
@@ -32,6 +32,7 @@ polars = { version = "0.37.0", features = [
     "semi_anti_join",
     "sql",
     "cse",
+    "csv",
     ] }
 
 [features]
