--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,7 +20,7 @@ tauri-build = { version = "1.5.1", features = [] }
 
 [dependencies]
 chrono = "0.4.38"
-serde = { version = "1.0.196", features = ["derive"] }
+serde = { version = "1", features = ["derive"] }
 tauri = { version = "1.6.8", features = [ "api-all"] }
 polars = { version = "0.41.2", features = [
     "lazy",
@@ -33,6 +33,8 @@ polars = { version = "0.41.2", features = [
     # "cse",
     "csv",
     ] }
+serde_json = "1"
+indexmap = {version = "2.2.6", features = ["serde"] }
 
 [features]
 # by default Tauri runs in production mode
