--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
+    "echarts": "^5.5.1",
     "element-plus": "^2.7.6",
     "element-resize-detector": "^1.2.4",
     "js-cookie": "^3.0.5",
