--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -35,6 +35,7 @@ polars = { version = "0.41.3", features = [
     ] }
 serde_json = "1"
 indexmap = {version = "2.2.6", features = ["serde"] }
+regex = "1"
 
 [features]
 # by default Tauri runs in production mode
