--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -32,6 +32,7 @@ polars = { version = "0.42.0", features = [
     "sql",
     # "cse",
     "csv",
+    "parquet",
     ] }
 serde_json = "1"
 indexmap = {version = "2.2.6", features = ["serde"] }
