--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -34,6 +34,7 @@ polars = { version = "0.42.0", features = [
     "csv",
     "parquet",
     ] }
+polars_excel_writer = "0.8.0"
 serde_json = "1"
 indexmap = {version = "2.2.6", features = ["serde"] }
 regex = "1"
