--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "@pureadmin/descriptions": "^1.1.1",
     "@pureadmin/table": "^2.1.0",
     "@pureadmin/utils": "^1.8.9",
@@ -43,7 +44,7 @@
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
     "echarts": "^5.5.1",
-    "element-plus": "^2.7.6",
+    "element-plus": "^2.8.2",
     "element-resize-detector": "^1.2.4",
     "js-cookie": "^3.0.5",
     "marked": "^12.0.0",
@@ -52,6 +53,7 @@
     "nprogress": "^0.2.0",
     "path": "^0.12.7",
     "pinia": "^2.0.36",
+    "prismjs": "^1.29.0",
     "qs": "^6.11.1",
     "responsive-storage": "^2.2.0",
     "sortablejs": "^1.15.0",
