--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,10 +19,12 @@ path = "src/lib/mod.rs"
 tauri-build = { version = "1.5.4", features = [] }
 
 [dependencies]
-calamine = "0.25.0"
+calamine = { version = "0.25", features = ["dates"] }
 chrono = "0.4.38"
+csv = "1.3.0"
 serde = { version = "1", features = ["derive"] }
 tauri = { version = "1.7.2", features = [ "api-all"] }
+itoa = "1"
 polars = { version = "0.43.0", features = [
     "lazy",
     "diagonal_concat",
@@ -35,7 +37,9 @@ polars = { version = "0.43.0", features = [
     "csv",
     "parquet",
     ] }
+rayon = "1.10.0"
 rust_xlsxwriter = "0.75.0"
+ryu = "1"
 serde_json = "1"
 indexmap = {version = "2.2.6", features = ["serde"] }
 
