--- a/package.json
+++ b/package.json
@@ -56,9 +56,9 @@
     "prismjs": "^1.29.0",
     "qs": "^6.11.1",
     "responsive-storage": "^2.2.0",
-    "sortablejs": "^1.15.0",
     "vue": "^3.3.1",
     "vue-demi": "^0.14.1",
+    "vue-draggable-plus": "^0.5.3",
     "vue-router": "^4.1.6",
     "vue-types": "^5.0.2"
   },
