--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,20 +28,21 @@ itoa = "1"
 polars = { version = "0.43.1", features = [
     "lazy",
     "diagonal_concat",
-    # "streaming",
+    "streaming",
     "asof_join",
     "cross_join",
     "semi_anti_join",
     "sql",
-    # "cse",
+    "cse",
     "csv",
     "parquet",
     ] }
 rayon = "1.10.0"
-rust_xlsxwriter = "0.76.0"
+rust_xlsxwriter = "0.77.0"
 ryu = "1"
 serde_json = "1"
 indexmap = {version = "2.5.0", features = ["serde"] }
+regex = "1.10.6"
 
 [features]
 # by default Tauri runs in production mode
