--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -43,6 +43,8 @@ ryu = "1"
 serde_json = "1"
 indexmap = {version = "2.5.0", features = ["serde"] }
 regex = "1.10.6"
+odbc-api = "8.1.4"
+lazy_static = "1.5.0"
 
 [features]
 # by default Tauri runs in production mode
