--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,6 +22,7 @@ tauri-build = { version = "1.5.5", features = [] }
 calamine = { version = "0.25", features = ["dates"] }
 chrono = "0.4.38"
 csv = "1.3.0"
+dbase = "0.5.0"
 serde = { version = "1", features = ["derive"] }
 tauri = { version = "1.8.0", features = [ "api-all"] }
 itoa = "1"
