--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "InsightSQL",
-  "version": "1.0.4",
+  "version": "1.0.6",
   "private": true,
   "scripts": {
     "tauri": "tauri",
@@ -37,7 +37,16 @@
     "@pureadmin/descriptions": "^1.1.1",
     "@pureadmin/table": "^2.1.0",
     "@pureadmin/utils": "^1.8.9",
-    "@tauri-apps/api": "^1.5.1",
+    "@tauri-apps/api": "^2.0.0",
+    "@tauri-apps/plugin-clipboard-manager": "^2.0.0",
+    "@tauri-apps/plugin-dialog": "~2",
+    "@tauri-apps/plugin-fs": "~2",
+    "@tauri-apps/plugin-global-shortcut": "~2",
+    "@tauri-apps/plugin-http": "~2",
+    "@tauri-apps/plugin-notification": "~2",
+    "@tauri-apps/plugin-os": "~2",
+    "@tauri-apps/plugin-process": "~2",
+    "@tauri-apps/plugin-shell": "~2",
     "@vueuse/core": "^10.1.2",
     "@vueuse/motion": "2.0.0-beta.12",
     "animate.css": "^4.1.1",
@@ -69,7 +78,7 @@
     "@iconify-icons/ri": "^1.2.7",
     "@iconify/vue": "^4.1.1",
     "@pureadmin/theme": "^3.0.0",
-    "@tauri-apps/cli": "^1.5.6",
+    "@tauri-apps/cli": "2.0.1",
     "@types/element-resize-detector": "1.1.3",
     "@types/js-cookie": "^3.0.3",
     "@types/mockjs": "^1.0.7",
