--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "InsightSQL"
-version = "1.0.4"
+version = "1.0.6"
 description = "InsightSQL"
 authors = ["tansen"]
 license = "MIT"
@@ -14,9 +14,10 @@ rust-version = "1.81.0"
 [lib]
 name = "lib"
 path = "src/lib/mod.rs"
+crate-type = ["lib", "staticlib", "cdylib"]
 
 [build-dependencies]
-tauri-build = { version = "1.5.5", features = [] }
+tauri-build = { version = "2", features = [] }
 
 [dependencies]
 calamine = { version = "0.25", features = ["dates"] }
@@ -24,7 +25,7 @@ chrono = "0.4.38"
 csv = "1.3.0"
 dbase = "0.5.0"
 serde = { version = "1", features = ["derive"] }
-tauri = { version = "1.8.0", features = [ "api-all"] }
+tauri = { version = "2", features = [] }
 itoa = "1"
 polars = { version = "0.43.1", features = [
     "lazy",
@@ -39,13 +40,21 @@ polars = { version = "0.43.1", features = [
     "parquet",
     ] }
 rayon = "1.10.0"
-rust_xlsxwriter = "0.77.0"
+rust_xlsxwriter = "0.79.0"
 ryu = "1"
 serde_json = "1"
-indexmap = {version = "2.5.0", features = ["serde"] }
-regex = "1.10.6"
+indexmap = {version = "2.6.0", features = ["serde"] }
+regex = "1.11.0"
 odbc-api = "8.1.4"
 lazy_static = "1.5.0"
+tauri-plugin-dialog = "2"
+tauri-plugin-shell = "2"
+tauri-plugin-process = "2"
+tauri-plugin-fs = "2"
+tauri-plugin-notification = "2"
+tauri-plugin-clipboard-manager = "2.0.1"
+tauri-plugin-http = "2"
+tauri-plugin-os = "2"
 
 [features]
 # by default Tauri runs in production mode
@@ -54,3 +63,6 @@ default = [ "custom-protocol" ]
 # this feature is used for production builds where `devPath` points to the filesystem
 # DO NOT remove this
 custom-protocol = [ "tauri/custom-protocol" ]
+
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-global-shortcut = "2"
