--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,8 +25,10 @@ chrono = "0.4.38"
 csv = "1.3.0"
 dbase = "0.5.0"
 serde = { version = "1", features = ["derive"] }
-tauri = { version = "2", features = [] }
+serde_json = "1"
+indexmap = {version = "2.6.0", features = ["serde"] }
 itoa = "1"
+pinyin = { version = "0.10.0", features = ["plain"] }
 polars = { version = "0.43.1", features = [
     "lazy",
     "diagonal_concat",
@@ -40,13 +42,12 @@ polars = { version = "0.43.1", features = [
     "parquet",
     ] }
 rayon = "1.10.0"
+regex = "1.11.0"
 rust_xlsxwriter = "0.79.0"
 ryu = "1"
-serde_json = "1"
-indexmap = {version = "2.6.0", features = ["serde"] }
-regex = "1.11.0"
 odbc-api = "8.1.4"
 lazy_static = "1.5.0"
+tauri = { version = "2", features = [] }
 tauri-plugin-dialog = "2"
 tauri-plugin-shell = "2"
 tauri-plugin-process = "2"
