--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@tauri-apps/plugin-shell": "~2",
     "@vueuse/core": "^10.1.2",
     "@vueuse/motion": "2.0.0-beta.12",
+    "ace-builds": "^1.36.2",
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
@@ -62,14 +63,14 @@
     "nprogress": "^0.2.0",
     "path": "^0.12.7",
     "pinia": "^2.0.36",
-    "prismjs": "^1.29.0",
     "qs": "^6.11.1",
     "responsive-storage": "^2.2.0",
     "vue": "^3.3.1",
     "vue-demi": "^0.14.1",
     "vue-draggable-plus": "^0.5.3",
     "vue-router": "^4.1.6",
-    "vue-types": "^5.0.2"
+    "vue-types": "^5.0.2",
+    "vue3-ace-editor": "^2.2.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.3",
