--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,7 +20,7 @@ crate-type = ["lib", "staticlib", "cdylib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-calamine = { version = "0.25", features = ["dates"] }
+calamine = { version = "0.26.1", features = ["dates"] }
 chrono = "0.4.38"
 csv = "1.3.0"
 dbase = "0.5.0"
@@ -32,6 +32,7 @@ pinyin = { version = "0.10.0", features = ["plain"] }
 polars = { version = "0.43.1", features = [
     "lazy",
     "diagonal_concat",
+    "dtype-decimal",
     "streaming",
     "asof_join",
     "cross_join",
