--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,13 +21,15 @@ tauri-build = { version = "2", features = [] }
 
 [dependencies]
 calamine = { version = "0.26.1", features = ["dates"] }
+cpc = "1.9.3"
 chrono = "0.4.38"
 csv = "1.3.1"
 dbase = "0.5.0"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
+dynfmt = { version = "0.1.5", default-features = false, features = ["curly"] }
 indexmap = { version = "2.6.0", features = ["serde"] }
 itoa = "1"
+lazy_static = "1.5.0"
+odbc-api = "9.0.0"
 pinyin = { version = "0.10.0", features = ["plain"] }
 polars = { version = "0.44.2", features = [
     "asof_join",
@@ -44,10 +46,12 @@ polars = { version = "0.44.2", features = [
     ] }
 rayon = "1.10.0"
 regex = "1.11.1"
+rust_decimal = "1.36.0"
 rust_xlsxwriter = "0.79.4"
 ryu = "1"
-odbc-api = "9.0.0"
-lazy_static = "1.5.0"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+smallvec = "1.13.2"
 tauri = { version = "2", features = [] }
 tauri-plugin-dialog = "2"
 tauri-plugin-shell = "2"
