--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -52,6 +52,8 @@ ryu = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 smallvec = "1.13.2"
+tempfile = "3"
+tokio = { version = "1", features = ["test-util"] }
 tauri = { version = "2", features = [] }
 tauri-plugin-dialog = "2"
 tauri-plugin-shell = "2"
