--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,10 +21,12 @@ tauri-build = { version = "2", features = [] }
 
 [dependencies]
 anyhow = "1"
+byteorder = "1.5.0"
 calamine = { version = "0.26.1", features = ["dates"] }
 cpc = "1.9.3"
 chrono = "0.4.39"
 csv = "1.3.1"
+csv-index = "0.1.6"
 dbase = "0.5.0"
 dynfmt = { version = "0.1.5", default-features = false, features = ["curly"] }
 indexmap = { version = "2.7.0", features = ["serde"] }
