--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -50,6 +50,7 @@ polars = { version = "0.45.1", features = [
 rayon = "1.10.0"
 regex = "1.11.1"
 rust_decimal = "1.36.0"
+rustc-hash = "2.1.0"
 rust_xlsxwriter = "0.80.0"
 ryu = "1"
 serde = { version = "1", features = ["derive"] }
