--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,6 +29,7 @@ csv = "1.3.1"
 csv-index = "0.1.6"
 dbase = "0.5.0"
 dynfmt = { version = "0.1.5", default-features = false, features = ["curly"] }
+filetime = "0.1"
 indexmap = { version = "2.7.1", features = ["serde"] }
 itoa = "1"
 lazy_static = "1.5.0"
