--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -47,6 +47,7 @@ polars = { version = "0.46.0", features = [
     "semi_anti_join",
     "sql",
     "streaming",
+    "json",
     ] }
 rayon = "1.10.0"
 regex = "1.11.1"
