--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,7 +27,7 @@ cpc = "1.9.3"
 chrono = "0.4.39"
 csv = "1.3.1"
 csv-index = "0.1.6"
-dbase = "0.5.0"
+dbase = { version = "0.6.0", features = ["encoding_rs"] }
 dynfmt = { version = "0.1.5", default-features = false, features = ["curly"] }
 indexmap = { version = "2.8.0", features = ["serde"] }
 itoa = "1"
