--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,7 @@ tauri-build = { version = "2", features = [] }
 
 [dependencies]
 anyhow = "1"
+atoi_simd = "0.16.0"
 byteorder = "1.5.0"
 calamine = { version = "0.26.1", features = ["dates"] }
 cpc = "1.9.3"
@@ -29,6 +30,7 @@ csv = "1.3.1"
 csv-index = "0.1.6"
 dbase = { version = "0.6.0", features = ["encoding_rs"] }
 dynfmt = { version = "0.1.5", default-features = false, features = ["curly"] }
+ext-sort = { version = "0.1.4", default-features = false }
 indexmap = { version = "2.8.0", features = ["serde"] }
 itoa = "1"
 lazy_static = "1.5.0"
@@ -57,6 +59,8 @@ rust_xlsxwriter = "0.84.0"
 ryu = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+simdutf8 = "0.1.5"
+sysinfo = "0.34"
 smallvec = "1.13.2"
 tempfile = "3.15.0"
 tokio = { version = "1.44.1", features = ["test-util"] }
