--- a/package.json
+++ b/package.json
@@ -37,16 +37,16 @@
     "@pureadmin/descriptions": "^1.1.1",
     "@pureadmin/table": "^2.1.0",
     "@pureadmin/utils": "^1.8.9",
-    "@tauri-apps/api": "^2.0.0",
+    "@tauri-apps/api": "2.4.1",
     "@tauri-apps/plugin-clipboard-manager": "^2.0.0",
-    "@tauri-apps/plugin-dialog": "~2",
-    "@tauri-apps/plugin-fs": "~2",
-    "@tauri-apps/plugin-global-shortcut": "~2",
-    "@tauri-apps/plugin-http": "~2",
-    "@tauri-apps/plugin-notification": "~2",
-    "@tauri-apps/plugin-os": "~2",
-    "@tauri-apps/plugin-process": "~2",
-    "@tauri-apps/plugin-shell": "~2",
+    "@tauri-apps/plugin-dialog": "2.2.1",
+    "@tauri-apps/plugin-fs": "2.2.1",
+    "@tauri-apps/plugin-global-shortcut": "2.2.0",
+    "@tauri-apps/plugin-http": "2.4.3",
+    "@tauri-apps/plugin-notification": "2.2.2",
+    "@tauri-apps/plugin-os": "2.2.1",
+    "@tauri-apps/plugin-process": "2.2.1",
+    "@tauri-apps/plugin-shell": "2.2.1",
     "@vueuse/core": "^10.1.2",
     "@vueuse/motion": "2.0.0-beta.12",
     "ace-builds": "^1.36.2",
