--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "@tauri-apps/plugin-os": "2.2.1",
     "@tauri-apps/plugin-process": "2.2.1",
     "@tauri-apps/plugin-shell": "2.2.1",
+    "@vue-flow/background": "^1.3.2",
+    "@vue-flow/controls": "^1.1.2",
+    "@vue-flow/core": "^1.45.0",
     "@vueuse/core": "^10.1.2",
     "@vueuse/motion": "2.0.0-beta.12",
     "ace-builds": "^1.36.2",
