--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -35,6 +35,7 @@ indexmap = { version = "2.10.0", features = ["serde"] }
 itoa = "1"
 lazy_static = "1.5.0"
 log = "0.4"
+memmap2 = "0.9"
 num_cpus = "1"
 odbc-api = "9.0.0"
 pinyin = { version = "0.10.0", features = ["plain"] }
