--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "not op_mini all"
   ],
   "dependencies": {
-    "@element-plus/icons-vue": "^2.3.1",
+    "@element-plus/icons-vue": "^2.3.2",
     "@pureadmin/descriptions": "^1.1.1",
     "@pureadmin/table": "^2.1.0",
     "@pureadmin/utils": "^1.8.9",
@@ -51,13 +51,13 @@
     "@vue-flow/controls": "^1.1.2",
     "@vue-flow/core": "^1.45.0",
     "@vueuse/core": "^10.1.2",
-    "@vueuse/motion": "2.0.0-beta.12",
+    "@vueuse/motion": "^2.2.6",
     "ace-builds": "^1.36.2",
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
     "echarts": "^5.5.1",
-    "element-plus": "^2.8.2",
+    "element-plus": "^2.11.0",
     "element-resize-detector": "^1.2.4",
     "js-cookie": "^3.0.5",
     "marked": "^15.0.0",
@@ -92,8 +92,8 @@
     "@types/sortablejs": "^1.15.1",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
-    "@vitejs/plugin-vue": "^4.2.2",
-    "@vitejs/plugin-vue-jsx": "^3.0.1",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "@vitejs/plugin-vue-jsx": "^4.2.0",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "autoprefixer": "^10.4.14",
@@ -112,8 +112,8 @@
     "prettier": "^2.8.7",
     "pretty-quick": "3.1.1",
     "rimraf": "^5.0.0",
-    "rollup-plugin-visualizer": "^5.9.0",
-    "sass": "^1.62.1",
+    "rollup-plugin-visualizer": "^6.0.3",
+    "sass": "^1.90.0",
     "sass-loader": "^13.2.2",
     "stylelint": "^15.6.1",
     "stylelint-config-html": "^1.1.0",
@@ -130,8 +130,8 @@
     "tailwindcss": "^3.3.2",
     "terser": "^5.17.1",
     "typescript": "^5.0.4",
-    "vite": "^4.3.5",
-    "vite-plugin-cdn-import": "^0.3.5",
+    "vite": "^5.4.19",
+    "vite-plugin-cdn-import": "^1.0.0",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-mock": "^2.9.6",
     "vite-plugin-remove-console": "^2.1.1",
