--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -38,6 +38,8 @@ csv = "1.3.1"
 csv-index = "0.1.6"
 dbase = { version = "0.6.1", features = ["encoding_rs"] }
 dynfmt = { version = "0.1.5", default-features = false, features = ["curly"] }
+encoding_rs = "0.8"
+encoding_rs_io = "0.1.7"
 ext-sort = { version = "0.1.5", default-features = false }
 indexmap = { version = "2.10.0", features = ["serde"] }
 itoa = "1"
