--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.5.4"
 description = "InsightSQL"
 authors = ["tansen"]
 license = "MIT"
-repository = ""
+repository = "https://github.com/tansen87/InsightSQL"
 default-run = "InsightSQL"
 edition = "2024"
 rust-version = "1.89.0"
@@ -29,19 +29,19 @@ tauri-build = { version = "2", features = [] }
 
 [dependencies]
 anyhow = "1"
-atoi_simd = "0.16.1"
+atoi_simd = "0.17.0"
 byteorder = "1.5.0"
 calamine = { version = "0.31.0", features = ["dates"] }
 cpc = "1.9.3"
 chrono = "0.4.42"
-csv = "1.3.1"
+csv = "1.4.0"
 csv-index = "0.1.6"
 dbase = { version = "0.6.1", features = ["encoding_rs"] }
 dynfmt = { version = "0.1.5", default-features = false, features = ["curly"] }
 encoding_rs = "0.8"
 encoding_rs_io = "0.1.7"
 ext-sort = { version = "0.1.5", default-features = false }
-indexmap = { version = "2.10.0", features = ["serde"] }
+indexmap = { version = "2.12.0", features = ["serde"] }
 itoa = "1"
 lazy_static = "1.5.0"
 log = "0.4"
@@ -49,7 +49,7 @@ memmap2 = "0.9"
 num_cpus = "1"
 odbc-api = "9.0.0"
 pinyin = { version = "0.10.0", features = ["plain"] }
-polars = { version = "0.51.0", features = [
+polars = { version = "0.52.0", features = [
     "cse",
     "sql",
     "lazy",
@@ -63,9 +63,9 @@ polars = { version = "0.51.0", features = [
     ] }
 rayon = "1.10.0"
 regex = "1.11.3"
-rust_decimal = "1.38.0"
+rust_decimal = "1.39.0"
 rustc-hash = "2.1.1"
-rust_xlsxwriter = "0.90.2"
+rust_xlsxwriter = "0.91.0"
 ryu = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
@@ -74,7 +74,7 @@ sysinfo = "0.37.0"
 smallvec = "1.15.1"
 tempfile = "3.23.0"
 tokio = { version = "1.48.0", features = ["test-util"] }
-tauri = { version = "2.8.5", features = [] }
+tauri = { version = "2.9.2", features = [] }
 tauri-plugin-dialog = "2"
 tauri-plugin-shell = "2"
 tauri-plugin-process = "2"
@@ -96,4 +96,4 @@ default = [ "custom-protocol" ]
 custom-protocol = [ "tauri/custom-protocol" ]
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
-tauri-plugin-global-shortcut = "2.3.0"
+tauri-plugin-global-shortcut = "2.3.1"
