--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "nprogress": "^0.2.0",
     "path": "^0.12.7",
     "pinia": "^2.0.36",
+    "pinia-plugin-persistedstate": "^3.2.3",
     "prismjs": "^1.29.0",
     "qs": "^6.11.1",
     "responsive-storage": "^2.2.0",
