--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
     "echarts": "^5.5.1",
-    "element-plus": "^2.11.0",
+    "element-plus": "^2.13.0",
     "element-resize-detector": "^1.2.4",
     "js-cookie": "^3.0.5",
     "marked": "^15.0.0",
@@ -70,6 +70,7 @@
     "prismjs": "^1.29.0",
     "qs": "^6.11.1",
     "responsive-storage": "^2.2.0",
+    "uuid": "^13.0.0",
     "vue": "^3.3.1",
     "vue-demi": "^0.14.1",
     "vue-router": "^4.1.6",
