--- a/public/serverConfig.json
+++ b/public/serverConfig.json
@@ -1,6 +1,6 @@
 {
   "Version": "1.0.0",
-  "Title": "InsightSQL",
+  "Title": "insight-x",
   "FixedHeader": true,
   "HiddenSideBar": false,
   "MultiTagsCache": false,
