--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -96,7 +96,7 @@ jobs:
           TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         with:
           tagName: v__VERSION__
-          releaseName: "InsightSQL v__VERSION__"
+          releaseName: "insight-x v__VERSION__"
           releaseBody: "See the assets to download this version and install."
           releaseDraft: true
           prerelease: false
