--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -34,6 +34,7 @@ byteorder = "1.5.0"
 calamine = { version = "0.32.0", features = ["dates"] }
 cpc = "1.9.3"
 chrono = "0.4.42"
+crossbeam-channel = "0.5"
 csv = "1.4.0"
 csv-index = "0.1.6"
 dbase = { version = "0.6.1", features = ["encoding_rs"] }
